# InvestmentFramework

./: .gitignore  ClientProfile.py  MarketData.py  Portfolio.py  PortfolioConstructor.py  PortfolioReporter.py  README.md  Reporter.py  ResearchViews.py  Universe.py  description.md  main.ipynb  main.py  pyproject.toml  svd.py  testapis.ipynb  tester.ipynb
Old/: DataIngestion.py  PortfolioConstruction.py  RiskControls.py  main copy.py
