[project]
name = "investmentframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fredapi>=0.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3.0",
    "setuptools>=82.0.1",
    "yfinance>=0.2.65",
]
